# BINNs

./: .gitignore  README.md  pyproject.toml
notebooks/: colab_pinn_cohort.ipynb
scripts/: prepare_lumiere.py  prepare_mu_shared_split.py  prepare_mu_transitions.py  run_clinical_3d_pilot.py  run_clinical_pilot.py  run_cohort_pilot.py  run_highres_comparison.py  run_mechanistic_forecast.py  run_multicompartment_cohort.py  run_multicompartment_pilot.py  run_pinn_cohort.py  run_synthetic_forecast.py  train_mu_shared_forecaster.py
src/gbm_pinn/: __init__.py  cavity.py  clinical.py  clinical_3d_experiment.py  clinical_experiment.py  cohort.py  equation.py  experiment.py  inverse.py  lumiere.py  mechanistic_forecast.py  mu_split.py  mu_transitions.py  multicompartment.py  multicompartment_clinical.py  multicompartment_cohort.py  multicompartment_pinn.py  multicompartment_solver.py  pinn.py  pinn_cohort.py  shared_forecaster.py  solver.py  synthetic.py  tissue.py  treatment.py  (+2 more)
tests/: test_cavity.py  test_clinical.py  test_clinical_3d_experiment.py  test_clinical_experiment.py  test_cohort.py  test_equation.py  test_experiment.py  test_inverse.py  test_lumiere.py  test_mechanistic_forecast.py  test_mu_split.py  test_mu_transitions.py  test_multicompartment.py  test_multicompartment_clinical.py  test_multicompartment_cohort.py  test_multicompartment_pinn.py  test_multicompartment_solver.py  test_pinn.py  test_pinn_cohort.py  test_shared_forecaster.py  test_solver.py  test_synthetic.py  test_tissue.py  test_treatment.py  test_treatment_extraction.py  test_unet_forecaster.py
