[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gbm-pinn"
version = "0.1.0"
description = "Physics-informed postoperative glioblastoma growth forecasting"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "numpy>=1.26,<3",
  "scipy>=1.12,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "ruff>=0.12,<1",
]
ml = [
  "torch>=2.6,<3",
]
imaging = [
  "nibabel>=5.3,<6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gbm_pinn"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
